--- a/card/index.css
+++ b/card/index.css
@@ -1,3 +1,23 @@
 body {
+    color: #FFFFFF;
     background-color: #2D2E36;
+}
+
+.card {
+    position: relative;
+    background-color: #383A45;
+    border-radius: 8px;
+    margin-left: 729px;
+    margin-right: 310px;
+    width: 8em
+}
+
+.main-text {
+    font-size: 30px;
+    font-family: Poppins;
+}
+
+.secondary-text {
+    font-size: 16px;
+    font-family: Poppins;
 }
