--- a/card/index.css
+++ b/card/index.css
@@ -1,23 +1,15 @@
 body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    display: grid;
+    place-items: center;
     color: #FFFFFF;
     background-color: #2D2E36;
+    font-family: 'Poppins';
 }
 
-.card {
-    position: relative;
-    background-color: #383A45;
-    border-radius: 8px;
-    margin-left: 729px;
-    margin-right: 310px;
-    width: 8em
-}
-
-.title {
-    font-size: 30px;
-    font-family: Poppins;
-}
-
-.description {
-    font-size: 16px;
-    font-family: Poppins;
+img {
+    width: 100%;
+    border-radius: .2rem;
 }
