--- a/card/index.css
+++ b/card/index.css
@@ -13,3 +13,48 @@ img {
     width: 100%;
     border-radius: .2rem;
 }
+
+a {
+    text-decoration: none;
+}
+
+.container {
+    background: #383A45;
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: .4rem;
+    max-width: 270px;
+}
+
+p.title {
+    color: white;
+    font-size: 1.2 rem;
+    line-height: 119%;
+
+}
+
+p.description {
+    color: #8d91A6;
+    font-size: .8rem;
+}
+
+.link {
+    width: .8rem;
+}
+
+@media only screen and (min-width: 550px) {
+    
+    .container {
+        max-width: 500px;
+    }
+    
+    .photo {
+        width: 9rem;
+        margin-right: 1rem;
+    }
+    
+    a {
+        display: flex;
+    }
+    
+}
